# Fragments

./: .gitignore  .gitmodules  README.md  de.haeckerfelix.Fragments.json  de.haeckerfelix.Fragments.json~  meson.build  org.gnome.Fragments.json
data/: de.haeckerfelix.Fragments.appdata.xml.in  de.haeckerfelix.Fragments.desktop.in  de.haeckerfelix.Fragments.gresource.xml  de.haeckerfelix.Fragments.gschema.xml  meson.build  org.gnome.Fragments.appdata.xml.in  org.gnome.Fragments.desktop.in  org.gnome.Fragments.gresource.xml  org.gnome.Fragments.gschema.xml
data/interface/: adwaita.css  app-menu.ui
data/ui/: settings-window.ui  torrent-group.ui  torrent-row.ui  torrent.ui  window.ui
po/: LINGUAS  POTFILES  cs.po  de.po  eo.po  es.po  fr.po  fragments.pot  it.po  nb_NO.po  nl.po  sr.po  tr.po
src/: fragments-app.vala  fragments-settings-window.vala  fragments-settings.vala  fragments-torrent-group.vala  fragments-torrent-listbox.vala  fragments-torrent-manager.vala  fragments-torrent-model.vala  fragments-torrent-row.vala  fragments-torrent.vala  fragments-utils.vala  fragments-window.vala  meson.build
src/vapis/: transmission.vapi
